--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>שיר-בוט</title>
   <link rel="icon" type="image/x-icon" href="site/favicon.ico">
   <link rel="stylesheet" href="site/styles.css">
- 
+  <link rel="stylesheet" href="styles.css">
+   
   <style>
     form {
       margin-bottom: 20px;
