--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>שיר-בוט</title>
   <link rel="icon" type="image/x-icon" href="site/favicon.ico">
   <link rel="stylesheet" href="site/styles.css">
-  <link rel="stylesheet" href="styles.css">
    
   <style>
     form {
@@ -134,6 +133,25 @@ h3.current {
   color: #73FBFD;
   background-color: #C0C0C0;
 }
+
+
+  ::-webkit-scrollbar {
+    width: 8px; /* Set the width of the scrollbar */
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* Set the background color of the scrollbar track */
+    border-radius: 4px; /* Set the border radius of the scrollbar track */
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #888; /* Set the color of the scrollbar thumb */
+    border-radius: 4px; /* Set the border radius of the scrollbar thumb */
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Set the color of the scrollbar thumb on hover */
+  }
 
   </style>
 </head>
