--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ h3.current {
 </div>
 
   <div class="fixed-bottom">
-    <p>כל הזכויות שמורות © 2023 - v1.0</p>
+    <p>ניתן להוריד באופן חופשי סינגלים בלבד</p>
   </div>
   <script src="site/script.js"></script>
 </body>
