--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 .search-input:hover,
 .search-select:hover,
 .search-button:hover {
-  box-shadow: 0 10px 20px rgba(45, 67, 115, 0.5);
+  box-shadow: 0 10px 20px #2D437380;
 }
 
 .search-button:hover {
@@ -133,6 +133,12 @@ h3.current {
   color: #73FBFD;
   background-color: #C0C0C0;
 }
+
+::selection {
+  background-color: #74B2CC;
+  color: white;
+}
+
 
   </style>
 </head>
