--- a/index.html
+++ b/index.html
@@ -176,13 +176,10 @@ h3.current {
   </div>
 
   <div class="fixed-bottom">
-    <p>כל הזכויות שמורות © 2023 - v1.0</p>
+    <p>בשימוש במערכת אתם מאשרים את שמירת כתובת המייל שלכם</p>
   </div>
 </div>
 
-  <div class="fixed-bottom">
-    <p>ניתן להוריד באופן חופשי סינגלים בלבד</p>
-  </div>
   <script src="site/script.js"></script>
 </body>
 </html>
