--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
   <title>שיר-בוט</title>
   <link rel="icon" type="image/x-icon" href="site/favicon.ico">
   <link rel="stylesheet" href="site/styles.css">
-   
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TGD4VQW4X8"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-TGD4VQW4X8');
+  </script>
   <style>
     form {
       margin-bottom: 20px;
