--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>שיר-בוט</title>
   <link rel="icon" type="image/x-icon" href="site/favicon.ico">
   <link rel="stylesheet" href="site/styles.css">
+  <link rel="stylesheet" href="site/personal.css">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-TGD4VQW4X8"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -12,141 +13,6 @@
     gtag('js', new Date());
     gtag('config', 'G-TGD4VQW4X8');
   </script>
-  <style>
-    form {
-      margin-bottom: 20px;
-      text-align: center;
-    }
-
-    table {
-	  width: 100%;
-	  overflow-y: scroll;
-    }
-
-    th, td {
-      padding: 8px;
-      text-align: right;
-      border-bottom: 1px solid #ddd;
-    }
-
-    .fixed-bottom {
-      height: 2vh;
-	  position: fixed;
-	  z-index: 9999;
-	  bottom: 0px;
-    }
-
-
-.search-input,
-.search-select {
-  font-family: Tahoma;
-  font-size: 18px;
-  padding-left: 10px;
-  padding-right: 10px;
-  width: 150px;
-  height: 58px;
-  border: 1px solid #005E8A;
-  border-radius: 4px;
-  box-shadow: 0 5px 15px rgba(45, 67, 115, 0.5);
-  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-}
-
-.search-input {
-  font-size: 20px;
-  width: 300px;
-}
-
-.search-input:focus,
-.search-select:focus {
-  outline: none;
-  background: #e6f7ff;
-}
-
-.search-select option {
-  background-color: white;
-}
-
-.search-button {
-  font-family: Tahoma;
-  width: 100px;
-  height: 60px;
-  font-size: 20px;
-  border-radius: 4px;
-  cursor: pointer;
-  background-color: #2d4373;
-  color: #fff;
-  border: none;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-  box-shadow: 0 5px 15px rgba(45, 67, 115, 0.5);
-  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-}
-
-.search-input:hover,
-.search-select:hover,
-.search-button:hover {
-  box-shadow: 0 10px 20px #2D437380;
-}
-
-.search-button:hover {
-  background-color: #1e2d4d;
-}
-
-.search-button:active {
-  background-color: #2d4373;
-}
-
-#resultsTable {
-  position: fixed;
-  margin-left: 3%;
-  margin-right: 3%;
-  margin-top: 180px;
-  margin-bottom: 500px;
-  width: 92%;
-  height: 55vh;
-  overflow: auto;
-  padding: 20px;
-}
-
-.topnav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 10px;
-  z-index: 9999;
-}
-
-.search-form {
-  position: absolute;
-  padding-top: 40px;
-  width: 100%;
-  z-index: 9999;
-}
-
-a {
-  color: #005E8A;
-  background-color: white;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  border-radius: 5px;
-  padding: 10px 20px;
-}
-
-a:hover,
-a:active,
-h3.current {
-  color: #73FBFD;
-  background-color: #C0C0C0;
-}
-
-::selection {
-  background-color: #74B2CC;
-  color: white;
-}
-
-
-  </style>
 </head>
 <body dir="rtl" style="background-color:#FFFEDB;">
   <div class="topnav">
@@ -172,11 +38,26 @@ h3.current {
           <th>מספר סידורי</th>
           <th>שם השיר</th>
           <th>שם האלבום</th>
-          <th>שם הזמר</th>
-		  
+          <th>שם הזמר</th>		  
         </tr>
       </thead>
-      <tbody></tbody>
+      <tbody>
+	    <tr>
+          <td colspan="4">
+		    <div id="instructions">
+              <h2>הוראות:</h2>
+              <ol>
+                <li>חפש שיר באופן חופשי.</li>
+                <li>לחץ על המספר הסידורי של השיר.</li>
+                <li>זה יוביל אותך להודעת מייל, שלח אותה.</li>
+                <li>תוך כדקה, ישלח אליך השיר המבוקש.</li>
+              </ol>
+              <p>במערכת זו ניתן להוריד סינגלים בלבד!</p>
+            </div>
+      </td>
+      </tr>
+	  
+	  </tbody>
     </table>
 	
   </div>
