--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <tbody>
 	    <tr>
           <td colspan="4">
-		    <div id="instructions">
-              <h2>הוראות:</h2>
+		    <center id="instructions">
+              <h2>הוראות</h2>
               <ol>
                 <li>חפש שיר באופן חופשי.</li>
                 <li>לחץ על המספר הסידורי של השיר.</li>
@@ -53,7 +53,7 @@
                 <li>תוך כדקה, ישלח אליך השיר המבוקש.</li>
               </ol>
               <p>במערכת זו ניתן להוריד סינגלים בלבד!</p>
-            </div>
+            </center>
       </td>
       </tr>
 	  
