--- a/index.html
+++ b/index.html
@@ -45,14 +45,12 @@
 	    <tr>
           <td colspan="4">
 		    <center id="instructions">
-              <h2>הוראות</h2>
-              <ol>
-                <li>חפש שיר באופן חופשי.</li>
-                <li>לחץ על המספר הסידורי של השיר.</li>
-                <li>זה יוביל אותך להודעת מייל, שלח אותה.</li>
-                <li>תוך כדקה, ישלח אליך השיר המבוקש.</li>
-              </ol>
-              <p>במערכת זו ניתן להוריד סינגלים בלבד!</p>
+			  <h3>הוראות שימוש</h3>
+              <p><b>⋙</b> חפש שיר באופן חופשי</p>
+              <p><b>⋙</b> לחץ על המספר הסידורי של השיר</p>
+              <p><b>⋙</b> זה יוביל אותך להודעת מייל, שלח אותה</p>
+              <p><b>⋙</b> תוך כדקה, ישלח אליך השיר המבוקש</p>
+              <p style="color: #6B6B6B; font-size: 14px">במערכת זו ניתן להוריד סינגלים בלבד!</p>
             </center>
       </td>
       </tr>
