--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>שיר-בוט</title>
+  <link rel="canonical" href="https://nhlocal.github.io/shir-bot/" />
   <link rel="icon" type="image/x-icon" href="site/favicon.ico">
   <link rel="stylesheet" href="site/styles.css">
   <link rel="stylesheet" href="site/personal.css">
@@ -16,6 +17,7 @@
 </head>
 <body dir="rtl" style="background-color:#FFFEDB;">
   <div class="topnav">
+    <a class="left_item" href="https://nhlocal.github.io/" title="לשאר התוכנות של היוצר"><img width="50" style="border-radius: 48%;" src="site/NH.LOCAL.jpg" alt="הסמל של המחבר"></a>
     <h3>שיר-בוט</h3>
     <form id="searchForm" class="search-form">
       <select id="searchBy" name="searchBy" class="search-select">
