--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </div>
 
   <div class="fixed-bottom">
-    <p>בשימוש במערכת אתם מאשרים את שמירת כתובת המייל שלכם</p>
+    <p>בשימוש במערכת אתם מאשרים את השימוש בכתובת המייל שלכם</p>
   </div>
 </div>
 
