--- a/index.html
+++ b/index.html
@@ -47,6 +47,52 @@
 	    <tr>
           <td colspan="4">
 		    <center id="instructions">
+			<!DOCTYPE html>
+<html>
+<head>
+<style>
+.ad-container {
+  background-color: #f2f2f2;
+  border: 1px solid #ccc;
+  padding: 20px;
+  width: 300px;
+  text-align: center;
+  border-radius: 5px
+}
+
+.ad-title {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.ad-content {
+  font-size: 15px;
+  margin-bottom: 20px;
+}
+
+.ad-footer {
+  font-size: 15px;
+  color: #777;
+}
+</style>
+</head>
+<body>
+<div class="ad-container">
+  <div class="ad-title">הודעה חשובה</div>
+  <div class="ad-content">
+    אתר זה נועד לשימוש בחינם לתועלת הציבור, לצערי, השירות שמתפעל אותו, מוגבל ליום. מכיון שכך, נראה שלא ישלחו שירים בזמן הקרוב, עד לאיפוס המגבלה היומית של השירות.
+  </div>
+  <div class="ad-content">
+    כך שאם המערכת לא שולחת לכם שיר (ששם האלבום שלו הוא "סינגל") - אין טעם לנסות שוב ושוב.
+  </div>
+  <div class="ad-footer">
+    המשך יום נעים!
+  </div>
+</div>
+</body>
+</html>
+
 			  <h3>הוראות שימוש</h3>
               <p><b>⋙</b> חפש שיר באופן חופשי</p>
               <p><b>⋙</b> לחץ על המספר הסידורי של השיר</p>
