--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     אתר זה נועד לשימוש בחינם לתועלת הציבור, לצערי, השירות שמתפעל אותו, מוגבל ליום. מכיון שכך, נראה שלא ישלחו שירים בזמן הקרוב, עד לאיפוס המגבלה היומית של השירות.
   </div>
   <div class="ad-content">
-    כך שאם המערכת לא שולחת לכם שיר (ששם האלבום שלו הוא "סינגל") - אין טעם לנסות שוב ושוב.
+    כך שאם המערכת לא שולחת לכם שיר (ששם האלבום שלו הוא "סינגל") - אין טעם לנסות שוב ושוב
   </div>
   <div class="ad-footer">
     המשך יום נעים!
