--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <div class="ad-container">
   <div class="ad-title">הודעה חשובה</div>
   <div class="ad-content">
-    אתר זה נועד לשימוש בחינם לתועלת הציבור, לצערי, השירות שמתפעל אותו, מוגבל ליום. מכיון שכך, נראה שלא ישלחו שירים בזמן הקרוב, עד לאיפוס המגבלה היומית של השירות.
+    אתר זה נועד לשימוש בחינם לתועלת הציבור, לצערי, השירות שמתפעל אותו, מוגבל ליום. מכיון שכך, עקב עומס יתר נראה שלא ישלחו שירים בזמן הקרוב, עד לאיפוס המגבלה היומית של השירות.
   </div>
   <div class="ad-content">
     כך שאם המערכת לא שולחת לכם שיר (ששם האלבום שלו הוא "סינגל") - אין טעם לנסות שוב ושוב
