--- a/index.html
+++ b/index.html
@@ -14,32 +14,6 @@
     gtag('js', new Date());
     gtag('config', 'G-TGD4VQW4X8');
   </script>
-  <style>
-.ad-container {
-  background-color: #f2f2f2;
-  border: 1px solid #ccc;
-  padding: 20px;
-  width: 300px;
-  text-align: center;
-  border-radius: 5px
-}
-
-.ad-title {
-  font-size: 18px;
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-.ad-content {
-  font-size: 15px;
-  margin-bottom: 20px;
-}
-
-.ad-footer {
-  font-size: 15px;
-  color: #777;
-}
-</style>
 </head>
 <body dir="rtl" style="background-color:#FFFEDB;">
   <div class="topnav">
@@ -73,6 +47,37 @@
 	    <tr>
           <td colspan="4">
 		    <center id="instructions">
+			<!DOCTYPE html>
+<html>
+<head>
+<style>
+.ad-container {
+  background-color: #f2f2f2;
+  border: 1px solid #ccc;
+  padding: 20px;
+  width: 300px;
+  text-align: center;
+  border-radius: 5px
+}
+
+.ad-title {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.ad-content {
+  font-size: 15px;
+  margin-bottom: 20px;
+}
+
+.ad-footer {
+  font-size: 15px;
+  color: #777;
+}
+</style>
+</head>
+<body>
 <div class="ad-container">
   <div class="ad-title">הודעה חשובה</div>
   <div class="ad-content">
@@ -82,6 +87,8 @@
     המשך יום נעים!
   </div>
 </div>
+</body>
+</html>
 
 			  <h3>הוראות שימוש</h3>
               <p><b>⋙</b> חפש שיר באופן חופשי</p>
