עדכוני עיצוב חשובים

--- a/index.html
+++ b/index.html
@@ -14,37 +14,11 @@
     gtag('js', new Date());
     gtag('config', 'G-TGD4VQW4X8');
   </script>
-<style>
-.ad-container {
-  background-color: #f2f2f2;
-  border: 1px solid #ccc;
-  padding: 20px;
-  width: 300px;
-  text-align: center;
-  border-radius: 5px
-}
-
-.ad-title {
-  font-size: 18px;
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-.ad-content {
-  font-size: 15px;
-  margin-bottom: 10px;
-}
-
-.ad-footer {
-  font-size: 15px;
-  color: #777;
-}
-</style>
 </head>
 <body dir="rtl" style="background-color:#FFFEDB;">
   <div class="topnav">
     <a class="left_item" href="https://nhlocal.github.io/" title="לשאר התוכנות של היוצר"><img width="50" style="border-radius: 48%;" src="site/NH.LOCAL.jpg" alt="הסמל של המחבר"></a>
-    <h3>שיר-בוט</h3>
+    <center class="parent-element"><h3><img width="85" src="site/logo.png">שיר-בוט</h3></center>
     <form id="searchForm" class="search-form">
       <select id="searchBy" name="searchBy" class="search-select">
         <option value="all">הכל</option>
@@ -73,12 +47,6 @@
 	    <tr>
           <td colspan="4">
 		    <center id="instructions">
-			
-<div class="ad-container">
-  <div class="ad-title">הודעה חשובה</div>
-<p class="ad-content">    אתר זה נועד לשימוש בחינם לתועלת הציבור, לצערי, השירות שמתפעל אותו, מוגבל ליום. מכיון שכך, עקב עומס יתר ייתכן ששליחת השירים תתעכב עבור משתמשים מסויימים, עד לאיפוס המגבלה היומית של השירות.</p>
-    <p class="ad-footer">המשך יום נעים!</p>
-</div>
 
 			  <h3>הוראות שימוש</h3>
               <p><b>⋙</b> חפש שיר באופן חופשי</p>
