--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="he">
 <head>
   <meta charset="utf-8">
+  <meta name="author" content="NHLOCAL">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="חיפוש חופשי והורדה בתוך מאגר של עשרות אלפי שירים">
+  <meta name="keywords" content="חיפוש שירים, שירים חסידיים,מוזיקה חסידית, מוזיקה יהודית">
   <title>שיר-בוט</title>
   <link rel="canonical" href="https://nhlocal.github.io/shir-bot/" />
   <link rel="icon" type="image/x-icon" href="site/favicon.ico">
@@ -18,7 +22,7 @@
 <body dir="rtl" style="background-color:#FFFEDB;">
   <div class="topnav">
     <a class="left_item" href="https://nhlocal.github.io/" title="לשאר התוכנות של היוצר"><img width="50" style="border-radius: 48%;" src="site/NH.LOCAL.jpg" alt="הסמל של המחבר"></a>
-    <center class="parent-element"><h3><img width="85" src="site/logo.png">שיר-בוט</h3></center>
+    <center class="parent-element"><h3><img width="85" src="site/logo.png" alt="סמל האתר">שיר-בוט</h3></center>
     <form id="searchForm" class="search-form">
       <select id="searchBy" name="searchBy" class="search-select">
         <option value="all">הכל</option>
