--- a/index.html
+++ b/index.html
@@ -18,6 +18,53 @@
     gtag('js', new Date());
     gtag('config', 'G-TGD4VQW4X8');
   </script>
+  
+
+<script>
+// מודעת שדרוג
+
+  document.addEventListener("DOMContentLoaded", function() {
+    // Display the modal overlay
+    var overlay = document.createElement("div");
+    overlay.classList.add("overlay");
+
+    var modal = document.createElement("div");
+    modal.classList.add("modal");
+
+    // Ad content
+    modal.innerHTML = `
+      <h2>חיפוש משופר!</h2>
+      <p>הוספנו מספר אלגוריתמים מתקדמים ושדרגנו את חיפוש השירים שלך. כעת ניתן לבצע חיפוש לפי מילים חלקיות שקרובות לשם המקורי ולקבל תוצאות ממויינות לפי רלוונטיות באופן אוטומטי. מעכשיו תוכל למצוא את השירים שלך בצורה מהירה ויעילה יותר!</p>
+      <p>לדוגמה, נסה לחפש "פריד אברהם" במקום "אברהם פריד" (שם המשפחה ואחר כך השם הפרטי) או לחפש שם של זמר בלי רווחים - לדוגמה "מוטישטיינמץ".</p>
+      <a href="#" id="searchButton">חפש שירים עכשיו</a>
+    `;
+
+    overlay.appendChild(modal);
+    document.body.appendChild(overlay);
+
+    // Close the modal overlay and move to the search input when clicking "חפש שירים עכשיו"
+    var searchButton = document.getElementById("searchButton");
+    searchButton.addEventListener("click", function(event) {
+      event.preventDefault();
+      overlay.remove();
+      var searchInput = document.querySelector("#searchInput");
+      if (searchInput) {
+        searchInput.focus();
+      }
+    });
+
+    // Close the modal overlay when clicking outside the modal content
+    overlay.addEventListener("click", function(event) {
+      if (event.target === overlay) {
+        overlay.remove();
+      }
+    });
+  });
+</script>
+
+
+  
+
 </head>
 <body dir="rtl" style="background-color:#FFFEDB;">
   <div class="topnav">
