עיצוב הוראות שימוש

--- a/index.html
+++ b/index.html
@@ -94,22 +94,23 @@
           <th>שם הזמר</th>		  
         </tr>
       </thead>
-      <tbody>
-	    <tr>
-          <td colspan="4">
-		    <center id="instructions">
+<tbody>
+  <tr>
+    <td colspan="4">
+      <center id="instructions">
+        <div class="instructions-container">
+          <h3>הוראות שימוש</h3>
+          <p><b>⋙</b> חפש שיר באופן חופשי</p>
+          <p><b>⋙</b> לחץ על המספר הסידורי של השיר</p>
+          <p><b>⋙</b> זה יוביל אותך להודעת מייל, שלח אותה</p>
+          <p><b>⋙</b> תוך כדקה, ישלח אליך השיר המבוקש</p>
+          <p class="disclaimer">במערכת זו ניתן להוריד סינגלים בלבד!</p>
+        </div>
+      </center>
+    </td>
+  </tr>
+</tbody>
 
-			  <h3>הוראות שימוש</h3>
-              <p><b>⋙</b> חפש שיר באופן חופשי</p>
-              <p><b>⋙</b> לחץ על המספר הסידורי של השיר</p>
-              <p><b>⋙</b> זה יוביל אותך להודעת מייל, שלח אותה</p>
-              <p><b>⋙</b> תוך כדקה, ישלח אליך השיר המבוקש</p>
-              <p style="color: #6B6B6B; font-size: 14px">במערכת זו ניתן להוריד סינגלים בלבד!</p>
-            </center>
-      </td>
-      </tr>
-	  
-	  </tbody>
     </table>
 	
   </div>
