--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
         searchInput.focus();
       }
     });
+	
+	 searchButton.focus();
 
     // Close the modal overlay when clicking outside the modal content
     overlay.addEventListener("click", function(event) {
