עיצוב תו מוזיקלי

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
       <center id="instructions">
         <div class="instructions-container">
           <h3>הוראות שימוש</h3>
-          <p><b>⋙</b> חפש שיר באופן חופשי</p>
-          <p><b>⋙</b> לחץ על המספר הסידורי של השיר</p>
-          <p><b>⋙</b> זה יוביל אותך להודעת מייל, שלח אותה</p>
-          <p><b>⋙</b> תוך כדקה, ישלח אליך השיר המבוקש</p>
+          <p><b>♪</b> חפש שיר באופן חופשי</p>
+          <p><b>♪</b> לחץ על המספר הסידורי של השיר</p>
+          <p><b>♪</b> זה יוביל אותך להודעת מייל, שלח אותה</p>
+          <p><b>♪</b> תוך כדקה, ישלח אליך השיר המבוקש</p>
           <p class="disclaimer">במערכת זו ניתן להוריד סינגלים בלבד!</p>
         </div>
       </center>
