עדכון הודעה למשתמשים

--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
 
     // Ad content
     modal.innerHTML = `
-      <h2>חיפוש משופר!</h2>
-      <p>הוספנו מספר אלגוריתמים מתקדמים ושדרגנו את חיפוש השירים שלך. כעת ניתן לבצע חיפוש לפי מילים חלקיות שקרובות לשם המקורי ולקבל תוצאות ממויינות לפי רלוונטיות באופן אוטומטי. מעכשיו תוכל למצוא את השירים שלך בצורה מהירה ויעילה יותר!</p>
-      <p>לדוגמה, נסה לחפש "פריד אברהם" במקום "אברהם פריד" (שם המשפחה ואחר כך השם הפרטי) או לחפש שם של זמר בלי רווחים - לדוגמה "מוטישטיינמץ".</p>
-      <a href="#" id="searchButton">חפש שירים עכשיו</a>
+      <h2>חדש! הכפלנו את המגבלה היומית</h2>
+      <p>עקב העומס הרב על האתר, נאלצנו להגביל את כמות הבקשות היומיות למשתמש. כעת, לאחר שדרוג המערכת, הכפלנו את כמות הורדות השירים היומית</p>
+      <a href="#" id="searchButton">נסו כעת!</a>
     `;
 
     overlay.appendChild(modal);
