--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="חיפוש חופשי והורדה בתוך מאגר של עשרות אלפי שירים">
   <meta name="keywords" content="חיפוש שירים, שירים חסידיים,מוזיקה חסידית, מוזיקה יהודית">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <title>שיר-בוט</title>
   <link rel="canonical" href="https://nhlocal.github.io/shir-bot/" />
   <link rel="icon" type="image/x-icon" href="site/favicon.ico">
@@ -69,7 +70,8 @@
 </head>
 <body dir="rtl" style="background-color:#FFFEDB;">
   <div class="topnav">
-    <a class="left_item" href="https://nhlocal.github.io/" title="לשאר התוכנות של היוצר"><img width="50" style="border-radius: 48%;" src="site/NH.LOCAL.jpg" alt="הסמל של המחבר"></a>
+    <a class="feedback-button" href="mailto:mesader.singelim@gmail.com" target="_blank" title="שלח משוב"><i class="fas fa-envelope"></i></a>
+    <a class="right-item" href="https://nhlocal.github.io/" title="לשאר התוכנות של היוצר"><img width="50" style="border-radius: 48%;" src="site/NH.LOCAL.jpg" alt="הסמל של המחבר"></a>
     <center class="parent-element"><h3><img width="85" src="site/logo.png" alt="סמל האתר">שיר-בוט</h3></center>
     <form id="searchForm" class="search-form">
       <select id="searchBy" name="searchBy" class="search-select">
@@ -105,7 +107,7 @@
           <p><b>♪</b> לחץ על המספר הסידורי של השיר</p>
           <p><b>♪</b> זה יוביל אותך להודעת מייל, שלח אותה</p>
           <p><b>♪</b> תוך כדקה, ישלח אליך השיר המבוקש</p>
-          <p class="disclaimer">במערכת זו ניתן להוריד סינגלים בלבד!</p>
+          <p class="disclaimer">שים לב שבמערכת זו ניתן להוריד סינגלים בלבד!</p>
         </div>
       </center>
     </td>
