הוספת כפתור בחירת סינגלים בלבד

--- a/index.html
+++ b/index.html
@@ -86,9 +86,11 @@ document.addEventListener("DOMContentLoaded", function() {
         <option value="album">שם האלבום</option>
         <option value="singer">שם הזמר</option>
       </select>
-
       <input type="text" id="searchInput" name="searchInput" class="search-input awesomplete" class="search-input" placeholder="הזן מילות מפתח..." autofocus>
       <button type="submit" class="search-button">חפש</button>
+      <div class="filter-container">
+        <button id="singleFilter" class="filter-button-light">הצג סינגלים בלבד</button>
+      </div>
     </form>
   </div>
 
