--- a/index2.html
+++ b/index2.html
@@ -8,9 +8,67 @@
   <meta name="keywords" content="חיפוש שירים, שירים חסידיים,מוזיקה חסידית, מוזיקה יהודית">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <title>שיר-בוט</title>
-  <link rel="icon" type="image/x-icon" href="https://nhlocal.github.io/shir-bot/site/favicon.ico">
-  <link rel="stylesheet" href="https://nhlocal.github.io/shir-bot/site/styles.css">
-  <link rel="stylesheet" href="https://nhlocal.github.io/shir-bot/site/personal.css">
+  <link rel="canonical" href="https://nhlocal.github.io/shir-bot/" />
+  <link rel="icon" type="image/x-icon" href="site/favicon.ico">
+  <link rel="stylesheet" href="site/styles.css">
+  <link rel="stylesheet" href="site/personal.css">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TGD4VQW4X8"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-TGD4VQW4X8');
+  </script>
+  
+
+<script>
+// מודעת שדרוגים ועדכונים
+document.addEventListener("DOMContentLoaded", function() {
+  // Check if the message has been shown before
+  if (!localStorage.getItem("messageShown")) {
+    // Display the modal overlay
+    var overlay = document.createElement("div");
+    overlay.classList.add("overlay");
+
+    var modal = document.createElement("div");
+    modal.classList.add("modal");
+
+    // Ad content
+    modal.innerHTML = `
+      <h2>חדש! הכפלנו את המגבלה היומית</h2>
+      <p>עקב העומס הרב על האתר, נאלצנו להגביל את כמות הבקשות היומיות למשתמש. כעת, לאחר שדרוג המערכת, הכפלנו את כמות הורדות השירים היומית</p>
+      <a href="#" id="searchButton">נסו כעת!</a>
+    `;
+
+    overlay.appendChild(modal);
+    document.body.appendChild(overlay);
+
+    // Close the modal overlay and move to the search input when clicking "חפש שירים עכשיו"
+    var searchButton = document.getElementById("searchButton");
+    searchButton.addEventListener("click", function(event) {
+      event.preventDefault();
+      overlay.remove();
+      var searchInput = document.querySelector("#searchInput");
+      if (searchInput) {
+        searchInput.focus();
+      }
+    });
+    
+    searchButton.focus();
+
+    // Close the modal overlay when clicking outside the modal content
+    overlay.addEventListener("click", function(event) {
+      if (event.target === overlay) {
+        overlay.remove();
+      }
+    });
+
+    // Mark the message as shown in local storage
+    localStorage.setItem("messageShown", "true");
+  }
+});
+</script>
+
 
   
 
@@ -28,7 +86,6 @@
         <option value="album">שם האלבום</option>
         <option value="singer">שם הזמר</option>
       </select>
-
       <input type="text" id="searchInput" name="searchInput" class="search-input awesomplete" class="search-input" placeholder="הזן מילות מפתח..." autofocus>
       <button type="submit" class="search-button">חפש</button>
       <div class="filter-container">
