הוספת תצוגת הורדה

--- a/index2.html
+++ b/index2.html
@@ -93,6 +93,11 @@ document.addEventListener("DOMContentLoaded", function() {
       </div>
     </form>
   </div>
+<div id="loadingMessage" class="loading-message">
+  <img src="site/loading.gif" alt="טעינה" />
+  <span>מוריד...</span>
+</div>
+
 
   <div id="resultsTable">
     <table>
