הרחבת מטא נתונים

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
   <meta name="author" content="NHLOCAL">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="חיפוש חופשי והורדה בתוך מאגר של עשרות אלפי שירים">
+  <meta name="description" content="מאגר שירים חרדי: הורדת שירים חינם באופן פשוט וקליל">
+  <meta name="description" content="שיר-בוט: הפלטפורמה להורדת שירים חרדיים ברמה הגבוהה ביותר">
+  <meta name="description" content="מוזיקה חסידית בלחיצת כפתור: שיר-בוט מציע הורדת שירים לקהל החרדי">
+  <meta name="description" content="שירים חרדיים בהורדה מהירה: הפלטפורמה שמקנה גישה למגוון השירים הפופולריים">
+  <meta name="description" content="שיר-בוט: המערכת לחיפוש והורדת שירים חרדיים לנייד ולמחשב">
+  <meta name="description" content="הזמרים החרדיים הפופולריים במקום אחד: הורדת שירים בקלות ובמהירות">
+  <meta name="description" content="גלו את עולם השירים החרדיים: שיר-בוט מציע הורדה של מאגר עשרות אלפי שירים">
+  <meta name="description" content="חיפוש מותאם אישית: הורדת שירים חרדיים לפי אלבום, זמר ועוד">
+  <meta name="description" content="הגע לשירים שאתה מחפש: שיר-בוט מספק הורדה מהירה ונוחה של שירים חרדיים">
+  <meta name="description" content="שירים חרדיים באיכות מעולה: הורדה של שירים בכל הז'אנרים החרדיים הנפוצים">
+  <meta name="keywords" content="הורדת שירים, שירים חרדיים, מוזיקה חסידית, שיר-בוט, מאגר שירים, חיפוש שירים, זמרים חרדיים, שירים חסידיים, הורדה מהירה, מספר סידורי, אלבום, זמר, חרדים, יהדות, טקסטים, תורה, מוסיקליות, מועדים, אמנות">
+  <meta name="keywords" content="song downloads, Chassidic songs, Jewish music, Shir-Bot, song database, song search, Chassidic singers, Chassidic music, fast download, serial number, album, singer, Chassidic, Judaism, lyrics, Torah, musicality, holidays, art">
   <meta name="keywords" content="חיפוש שירים, שירים חסידיים,מוזיקה חסידית, מוזיקה יהודית">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <title>שיר-בוט</title>
