--- a/index2.html
+++ b/index2.html
@@ -104,10 +104,19 @@ document.addEventListener("DOMContentLoaded", function() {
       </div>
     </form>
   </div>
+  
+  
 <div id="loadingMessage" class="loading-message">
   <img src="site/loading.gif" alt="טעינה" />
   <span>מוריד...</span>
 </div>
+<div id="modalOverlay" class="modal-overlay">
+  <div class="modal-content">
+    <span id="modalMessage"></span><br>
+    <button id="modalOkButton" style="font-family: tahoma">אישור</button>
+  </div>
+</div>
+
 
 
   <div id="resultsTable">
