התאמה מלאה של הגרסאות

--- a/index.html
+++ b/index.html
@@ -106,6 +106,18 @@ document.addEventListener("DOMContentLoaded", function() {
     </form>
   </div>
 
+
+<div id="loadingMessage" class="loading-message">
+  <img src="site/loading.gif" alt="טעינה" />
+  <span>מוריד...</span>
+</div>
+<div id="modalOverlay" class="modal-overlay">
+  <div class="modal-content">
+    <span id="modalMessage"></span><br>
+    <button id="modalOkButton" style="font-family: tahoma">אישור</button>
+  </div>
+</div>
+
   <div id="resultsTable">
     <table>
       <thead>
