--- a/index2.html
+++ b/index2.html
@@ -20,6 +20,7 @@
   <meta name="keywords" content="חיפוש שירים, שירים חסידיים,מוזיקה חסידית, מוזיקה יהודית">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <title>שיר-בוט</title>
+  <link rel="canonical" href="https://nhlocal.github.io/shir-bot/" />
   <link rel="icon" type="image/x-icon" href="site/favicon.ico">
   <link rel="stylesheet" href="site/styles.css">
   <link rel="stylesheet" href="site/personal.css">
@@ -104,8 +105,8 @@ document.addEventListener("DOMContentLoaded", function() {
       </div>
     </form>
   </div>
-  
-  
+
+
 <div id="loadingMessage" class="loading-message">
   <img src="site/loading.gif" alt="טעינה" />
   <span>מוריד...</span>
@@ -116,8 +117,6 @@ document.addEventListener("DOMContentLoaded", function() {
     <button id="modalOkButton" style="font-family: tahoma">אישור</button>
   </div>
 </div>
-
-
 
   <div id="resultsTable">
     <table>
