--- a/index2.html
+++ b/index2.html
@@ -110,7 +110,7 @@ document.addEventListener('DOMContentLoaded', function() {
     
     if (loadingMessageElement) {
         gtag('event', 'down_song', {
-            'event_category': 'Element Views',
+            'event_category': 'Element down',
             'event_label': 'Loading Message'
         });
     }
